--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="container">
           <span class="subheading">Work Experience</span>
           <h2 class="heading-secondary">
-            Over 6 years of industry expertise.
+            Over 6+ years of industry expertise.
           </h2>
         </div>
 
