razorpay added in technology

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
               src="https://cdn.simpleicons.org/docker"
             />
             <img alt="Git" title="Git" src="https://cdn.simpleicons.org/git" />
+            <img alt="Git" title="razorpay" src="https://cdn.simpleicons.org/razorpay">
           </div>
         </div>
       </section>
