github contribution chart added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/queries.css" />
-    
+
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@5.5.4/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/ionicons@5.5.4/dist/ionicons/ionicons.js"></script>
 
@@ -230,6 +231,18 @@
               alt="be_the_real_deal"
             />
           </div>
+        </div>
+      </section>
+
+      <section class="github-contribution-section">
+        <div class="container center-text">
+          <span class="subheading">GitHub Contributions</span>
+          <h2 class="heading-secondary">
+            Every Commit Counts, My GitHub Contribution Timeline!
+          </h2>
+        </div>
+        <div class="scroll-container">
+            <svg id="contributionsGraph"></svg>
         </div>
       </section>
 
