--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
 
       <section class="section-awards" id="awards">
         <div class="container center-text">
-          <span class="subheading">Awards</span>
+          <span class="subheading">Certifications & Achievements</span>
           <h2 class="heading-secondary">
-            Recognized Industry Leader | Awarded for Outstanding Contributions
+            Awarded | Certified | Industry-Recognized
           </h2>
         </div>
 
@@ -229,6 +229,21 @@
               src="images/awards/be_the_real_deal.jpg"
               class="award-img"
               alt="be_the_real_deal"
+            />
+          </div>
+
+          <div class="award">
+            <img
+              src="images/certificates/certificate_react_udemy.jpg"
+              class="award-img"
+              alt="react_certification"
+            />
+          </div>
+          <div class="award">
+            <img
+              src="images/certificates/certificate_docker_udemy.jpg"
+              class="award-img"
+              alt="docker_certification"
             />
           </div>
         </div>
